unpackaged/main/default/objects/Account/fields/Capital_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Offer_Amount__c</fullName>
    <description>Capital available for the business through the Parafin Cash Advance product.</description>
    <inlineHelpText>Capital available for the business through the Parafin Cash Advance product.</inlineHelpText>
    <label>Capital Offer Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>