unpackaged/main/default/objects/Account/fields/Capital_Offer_Email_Trigger_Link__c.field-meta.xml
<CustomField>
    <fullName>Capital_Offer_Email_Trigger_Link__c</fullName>
    <description>Link to trigger a capital offer email to the business owner for the cash advance product powered by Parafin</description>
    <inlineHelpText>Link to trigger a capital offer email to the business owner for the cash advance product powered by Parafin</inlineHelpText>
    <label>Capital Offer Email Trigger Link</label>
    <type>Url</type>
</CustomField>