unpackaged/main/default/objects/Account/fields/Capital_Offer_Link__c.field-meta.xml
<CustomField>
    <fullName>Capital_Offer_Link__c</fullName>
    <description>Link to the capital offer for the cash advance product powered by Parafin.</description>
    <inlineHelpText>Link to the capital offer for the cash advance product powered by Parafin.</inlineHelpText>
    <label>Capital Offer Link</label>
    <type>Url</type>
</CustomField>